getGroupsPerUser and getGroupPlaylist routes
